--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@astrojs/prefetch": "^0.1.1",
+    "@fontsource/ibm-plex-mono": "^4.5.13",
     "astro": "^1.9.0",
     "astro-color-scheme": "^1.0.1",
     "astro-icon": "^0.8.0"
