--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fontsource/ibm-plex-mono": "^4.5.13",
     "astro": "^1.9.0",
     "astro-color-scheme": "^1.0.1",
+    "astro-google-fonts-optimizer": "^0.2.2",
     "astro-icon": "^0.8.0"
   }
 }
